--- a/client/package.json
+++ b/client/package.json
@@ -9,7 +9,8 @@
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "wouter": "^2.12.1"
   },
   "devDependencies": {
     "esbuild": "^0.19.8"
