--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "strict": true,
+    "lib": ["ES2023", "DOM"],
     "jsx": "react-jsx",
     "jsxImportSource": "@emotion/react",
   }
