--- a/server/deno.json
+++ b/server/deno.json
@@ -1,6 +1,7 @@
 {
   "tasks": {
     "start": "deno run --allow-read --allow-write --allow-env --unstable --allow-net ./main.ts",
+    "add_user": "deno run --allow-read --allow-write --allow-env --unstable ./scripts/add_user.ts",
     "list_users": "deno run --allow-read --allow-write --allow-env --unstable ./scripts/list_users.js",
     "kvs": "deno run --allow-read --allow-write --allow-env --unstable ./scripts/list_kvs.js"
   }
