--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@exampledev/new.css": "^1.1.3",
+    "@picocss/pico": "^1.5.11",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
     "react": "^18.2.0",
